--- a/team.html
+++ b/team.html
@@ -11,7 +11,22 @@
 <body>
     <!-- Same navigation bar as index.html -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        ... (copy navbar code from index.html)
+        <div class="container">
+            <a class="navbar-brand" href="index.html">
+                <img src="images/logo.png" alt="Lab Logo" width="30" height="30">
+                Awesome Lab
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="research.html">Research</a></li>
+                    <li class="nav-item"><a class="nav-link" href="team.html">Team</a></li>
+                </ul>
+            </div>
+        </div>
     </nav>
 
     <!-- Team Content -->
@@ -41,7 +56,9 @@
 
     <!-- Same footer as index.html -->
     <footer class="bg-dark text-light py-4">
-        ... (copy footer code from index.html)
+        <div class="container text-center">
+            <p>&copy; 2023 Awesome Science Lab. Contact: lab@university.edu</p>
+        </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
