--- a/opportunities.html
+++ b/opportunities.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lab Name - Research</title>
+    <title>Lab Name - Opportunities</title>
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
     <header>
-        <h1>Research</h1>
+        <h1>Opportunities</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -21,12 +21,12 @@
         </nav>
     </header>
     <main>
-        <h2>Our Research Areas</h2>
-        <p>We focus on the following areas:</p>
+        <h2>Join Our Lab</h2>
+        <p>We are always looking for talented individuals to join our team. Check out the opportunities below:</p>
         <ul>
-            <li>Area 1: Description of research area 1.</li>
-            <li>Area 2: Description of research area 2.</li>
-            <li>Area 3: Description of research area 3.</li>
+            <li><strong>Postdoctoral Positions:</strong> Description of the position and requirements.</li>
+            <li><strong>Graduate Students:</strong> Information for prospective PhD or Master's students.</li>
+            <li><strong>Undergraduate Students:</strong> Opportunities for research assistantships.</li>
         </ul>
     </main>
     <footer>
