--- a/people.html
+++ b/people.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lab Name - Research</title>
+    <title>Lab Name - People</title>
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
     <header>
-        <h1>Research</h1>
+        <h1>People</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -21,12 +21,13 @@
         </nav>
     </header>
     <main>
-        <h2>Our Research Areas</h2>
-        <p>We focus on the following areas:</p>
+        <h2>Our Team</h2>
+        <p>Meet the members of our lab:</p>
         <ul>
-            <li>Area 1: Description of research area 1.</li>
-            <li>Area 2: Description of research area 2.</li>
-            <li>Area 3: Description of research area 3.</li>
+            <li><strong>Principal Investigator:</strong> Dr. John Doe</li>
+            <li><strong>Postdoctoral Researchers:</strong> Jane Smith, Alex Brown</li>
+            <li><strong>Graduate Students:</strong> Emily Davis, Michael Lee</li>
+            <li><strong>Undergraduate Students:</strong> Sarah Johnson, David Wilson</li>
         </ul>
     </main>
     <footer>
