--- a/publications.html
+++ b/publications.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lab Name - Research</title>
+    <title>Lab Name - Publications</title>
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
     <header>
-        <h1>Research</h1>
+        <h1>Publications</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -21,12 +21,11 @@
         </nav>
     </header>
     <main>
-        <h2>Our Research Areas</h2>
-        <p>We focus on the following areas:</p>
+        <h2>Recent Publications</h2>
         <ul>
-            <li>Area 1: Description of research area 1.</li>
-            <li>Area 2: Description of research area 2.</li>
-            <li>Area 3: Description of research area 3.</li>
+            <li>Author 1, Author 2, Author 3. (2023). Title of the paper. <em>Journal Name</em>, Volume(Issue), Pages. <a href="#">Link</a></li>
+            <li>Author 1, Author 2, Author 3. (2022). Title of the paper. <em>Journal Name</em>, Volume(Issue), Pages. <a href="#">Link</a></li>
+            <li>Author 1, Author 2, Author 3. (2021). Title of the paper. <em>Journal Name</em>, Volume(Issue), Pages. <a href="#">Link</a></li>
         </ul>
     </main>
     <footer>
