--- a/news.html
+++ b/news.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lab Name - Research</title>
+    <title>Lab Name - News</title>
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
     <header>
-        <h1>Research</h1>
+        <h1>News</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -21,12 +21,11 @@
         </nav>
     </header>
     <main>
-        <h2>Our Research Areas</h2>
-        <p>We focus on the following areas:</p>
+        <h2>Latest News</h2>
         <ul>
-            <li>Area 1: Description of research area 1.</li>
-            <li>Area 2: Description of research area 2.</li>
-            <li>Area 3: Description of research area 3.</li>
+            <li><strong>October 2023:</strong> Our lab published a new paper in <em>Journal Name</em>.</li>
+            <li><strong>September 2023:</strong> Dr. John Doe gave a keynote speech at Conference XYZ.</li>
+            <li><strong>August 2023:</strong> Welcome to our new graduate students, Emily and Michael!</li>
         </ul>
     </main>
     <footer>
