--- a/index.html
+++ b/index.html
@@ -3,73 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Awesome Science Lab</title>
-    <!-- Bootstrap CSS (optional) -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="css/style.css">
+    <title>Lab Name - Home</title>
+    <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
-    <!-- Navigation Bar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container">
-            <a class="navbar-brand" href="index.html">
-                <img src="images/logo.png" alt="Lab Logo" width="30" height="30">
-                Awesome Lab
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="research.html">Research</a></li>
-                    <li class="nav-item"><a class="nav-link" href="team.html">Team</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-
-    <!-- Hero Section -->
-    <div class="hero-section text-center py-5">
-        <div class="container">
-            <h1 class="display-4">Welcome to Our Lab</h1>
-            <p class="lead">Exploring the frontiers of science and technology.</p>
-        </div>
-    </div>
-
-    <!-- Main Content -->
-    <div class="container my-5">
-        <div class="row">
-            <div class="col-md-6">
-                <h2>Latest News</h2>
-                <div class="card mb-3">
-                    <div class="card-body">
-                        <h5 class="card-title">New Discovery Published!</h5>
-                        <p class="card-text">Our latest paper on quantum computing is now available.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6">
-                <h2>Upcoming Events</h2>
-                <div class="card mb-3">
-                    <div class="card-body">
-                        <h5 class="card-title">Lab Open House</h5>
-                        <p class="card-text">Join us on October 15th for a lab tour.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- Footer -->
-    <footer class="bg-dark text-light py-4">
-        <div class="container text-center">
-            <p>&copy; 2023 Awesome Science Lab. Contact: lab@university.edu</p>
-        </div>
+    <header>
+        <h1>Welcome to [Lab Name]</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="research.html">Research</a></li>
+                <li><a href="people.html">People</a></li>
+                <li><a href="publications.html">Publications</a></li>
+                <li><a href="opportunities.html">Opportunities</a></li>
+                <li><a href="news.html">News</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <p>This is the homepage of our lab. We focus on [brief description of research].</p>
+    </main>
+    <footer>
+        <p>&copy; 2023 [Lab Name]. All rights reserved.</p>
     </footer>
-
-    <!-- Bootstrap JS (optional) -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
