--- a/publications.html
+++ b/publications.html
@@ -3,33 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lab Name - Publications</title>
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <title>Publications - Your Lab Name</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
+    <!-- Header -->
     <header>
-        <h1>Publications</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="research.html">Research</a></li>
-                <li><a href="people.html">People</a></li>
-                <li><a href="publications.html">Publications</a></li>
-                <li><a href="opportunities.html">Opportunities</a></li>
-                <li><a href="news.html">News</a></li>
-            </ul>
-        </nav>
+        <div class="container">
+            <h1>Your Lab Name</h1>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="research.html">Research</a></li>
+                    <li><a href="publications.html">Publications</a></li>
+                    <li><a href="team.html">Team</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
-    <main>
-        <h2>Recent Publications</h2>
-        <ul>
-            <li>Author 1, Author 2, Author 3. (2023). Title of the paper. <em>Journal Name</em>, Volume(Issue), Pages. <a href="#">Link</a></li>
-            <li>Author 1, Author 2, Author 3. (2022). Title of the paper. <em>Journal Name</em>, Volume(Issue), Pages. <a href="#">Link</a></li>
-            <li>Author 1, Author 2, Author 3. (2021). Title of the paper. <em>Journal Name</em>, Volume(Issue), Pages. <a href="#">Link</a></li>
-        </ul>
-    </main>
+
+    <!-- Publications Section -->
+    <section id="publications" class="section">
+        <div class="container">
+            <h2>Publications</h2>
+            <ul>
+                <li>Publication 1 - <a href="#">Link</a></li>
+                <li>Publication 2 - <a href="#">Link</a></li>
+                <li>Publication 3 - <a href="#">Link</a></li>
+            </ul>
+        </div>
+    </section>
+
+    <!-- Footer -->
     <footer>
-        <p>&copy; 2023 [Lab Name]. All rights reserved.</p>
+        <div class="container">
+            <p>&copy; 2023 Your Lab Name. All rights reserved.</p>
+            <div class="social-links">
+                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="#"><i class="fab fa-linkedin"></i></a>
+                <a href="#"><i class="fab fa-github"></i></a>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
