--- a/team.html
+++ b/team.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Lab Name</title>
+    <title>Team - Your Lab Name</title>
     <link rel="stylesheet" href="styles/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
     <!-- Header -->
@@ -24,45 +23,6 @@
         </div>
     </header>
 
-    <!-- Home Section -->
-    <section id="home" class="hero">
-        <div class="container">
-            <h2>Welcome to Our Lab</h2>
-            <p>We are a research group focused on [Your Research Area].</p>
-            <a href="#research" class="btn">Learn More</a>
-        </div>
-    </section>
-
-    <!-- Research Section -->
-    <section id="research" class="section">
-        <div class="container">
-            <h2>Research</h2>
-            <p>Our research focuses on [Research Areas].</p>
-            <div class="research-grid">
-                <div class="research-item">
-                    <h3>Research Topic 1</h3>
-                    <p>Description of research topic 1.</p>
-                </div>
-                <div class="research-item">
-                    <h3>Research Topic 2</h3>
-                    <p>Description of research topic 2.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Publications Section -->
-    <section id="publications" class="section">
-        <div class="container">
-            <h2>Publications</h2>
-            <ul>
-                <li>Publication 1 - <a href="#">Link</a></li>
-                <li>Publication 2 - <a href="#">Link</a></li>
-                <li>Publication 3 - <a href="#">Link</a></li>
-            </ul>
-        </div>
-    </section>
-
     <!-- Team Section -->
     <section id="team" class="section">
         <div class="container">
@@ -78,16 +38,12 @@
                     <h3>Member Name 2</h3>
                     <p>Role</p>
                 </div>
+                <div class="team-member">
+                    <img src="images/member3.jpg" alt="Team Member 3">
+                    <h3>Member Name 3</h3>
+                    <p>Role</p>
+                </div>
             </div>
-        </div>
-    </section>
-
-    <!-- Contact Section -->
-    <section id="contact" class="section">
-        <div class="container">
-            <h2>Contact</h2>
-            <p>Email: your-email@example.com</p>
-            <p>Address: Your Lab Address</p>
         </div>
     </section>
 
@@ -102,7 +58,5 @@
             </div>
         </div>
     </footer>
-
-    <script src="scripts/script.js"></script>
 </body>
 </html>
